feat: add pipeline, add module-info to fxui, disable headless
add args for moduleinfo in fxui-pom.  
configure pipeline.  
disable headless due to not in use (skips instead).